2.1.0 not released

	* try harder to bind TCP and UDP sockets to the same port
	* made disk_interface's status_t type a flags type
	* optimize resume data format to use less space
	* add a simpler overload to bencode() returning a vector<char>
	* introduced a new API for creating torrents, enabling file_storage optimizations
	* default build to not include functions deprecated in libtorrent 1.1 and earlier
	* add comment, created_by and creation_date to add_torrent_params
	* move session_flags to session_params
	* the entry class is now a standard variant type
	* use std::string_view instead of boost counterpart
	* libtorrent now requires C++17 to build
	* added support for WebTorrent

2.0.11 not released

	* fix bug where file_progress could sometimes be reported as >100%
	* don't hint FADV_RANDOM on posix systems. May improve seeding performance
	* allow boost connect while checking resume data if no_verify_files flag is set
	* fix BEP-40 peer priority for IPv6
	* limit piece size in torrent creator
	* fix file pre-allocation when changing file priority (HanabishiRecca)
	* fix uTP issue where closing the connection could corrupt the payload
	* apply DSCP/TOS to sockets before initiating the TCP connection
	* assume copy_file_range() exists on linux (unless old glibc)
	* fix issue where set_piece_deadline() did not correctly post read_piece_alert
	* fix integer overflow in piece picker
	* torrent_status::num_pieces counts pieces passed hash check, as documented
	* check settings_pack::max_out_request_queue before performance alert

2.0.10 released

	* allow on_unknown_torrent method in the absence of active torrents (new plugin feature added)
	* add feature to async_move_storage() to not move files
	* fix reject resume data if it contains mismatching info hashes
	* fix clear the candidate_cache when clear peer_list
	* fix missing python converter for dht::announce_flags_t

2.0.9 released

	* fix issue with web seed connections when they close and re-open