@@ -33,11 +33,7 @@ TORRENT_CRYPTO_NAMESPACE
 #elif TORRENT_USE_CNG
 #elif TORRENT_USE_CRYPTOAPI
 #elif defined TORRENT_USE_LIBCRYPTO
-#if OPENSSL_VERSION_NUMBER >= 0x10100000L
 		m_context = EVP_MD_CTX_new();
-#else
-		m_context = EVP_MD_CTX_create();
-#endif
 		EVP_DigestInit_ex(m_context, EVP_sha1(), nullptr);
 #else
 		aux::SHA1_init(&m_context);
@@ -173,11 +169,7 @@ TORRENT_CRYPTO_NAMESPACE
 #if defined TORRENT_USE_LIBGCRYPT
 		gcry_md_close(m_context);
 #elif defined TORRENT_USE_LIBCRYPTO
-#if OPENSSL_VERSION_NUMBER >= 0x10100000L
 		if (m_context) EVP_MD_CTX_free(m_context);
-#else
-		if (m_context) EVP_MD_CTX_destroy(m_context);
-#endif
 #endif
 	}
 
@@ -190,11 +182,7 @@ TORRENT_CRYPTO_NAMESPACE
 #elif TORRENT_USE_CNG
 #elif TORRENT_USE_CRYPTOAPI_SHA_512
 #elif defined TORRENT_USE_LIBCRYPTO
-#if OPENSSL_VERSION_NUMBER >= 0x10100000L
 		m_context = EVP_MD_CTX_new();
-#else
-		m_context = EVP_MD_CTX_create();
-#endif
 		EVP_DigestInit_ex(m_context, EVP_sha256(), nullptr);
 #else
 		aux::SHA256_init(m_context);
@@ -330,11 +318,7 @@ TORRENT_CRYPTO_NAMESPACE
 #if defined TORRENT_USE_LIBGCRYPT
 		gcry_md_close(m_context);
 #elif defined TORRENT_USE_LIBCRYPTO
-#if OPENSSL_VERSION_NUMBER >= 0x10100000L
 		if (m_context) EVP_MD_CTX_free(m_context);
-#else
-		if (m_context) EVP_MD_CTX_destroy(m_context);
-#endif
 #endif
 	}
 
